<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.NewUserActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2">


        <TextView
            android:id="@+id/new_user_wellcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wellcome"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:textSize="16pt"
            />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_user_wellcome"
            android:layout_centerInParent="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/now_your_lifes_is_without_quere"
            android:gravity="center"
            android:textSize="16pt" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="5">


        <EditText
            android:id="@+id/new_user_name"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input"
            android:ems="10"
            android:gravity="center"
            android:inputType="textPersonName"
            android:minHeight="50dp"
            android:text="@string/insert_name"
            android:textColor="#555" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_user_name"
            android:orientation="horizontal">
            <TextView
                android:textSize="10pt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textColor="@color/cyan"
                android:paddingLeft="20dp"
                android:text="@string/ja_tenho_uma_conta"
                android:onClick="login"></TextView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12pt"
                android:gravity="end"
                android:textColor="@color/cyan"
                android:paddingEnd="20dp"
                android:text="@string/next"
                android:visibility="invisible"
                android:onClick="nextScreen"></TextView>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <View
            android:layout_width="84dp"
            android:layout_height="59dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/icone">


        </View>

    </RelativeLayout>
</LinearLayout>